Fixed nav bar spacing on mobile

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -157,6 +157,9 @@ pre
     .wrapper-normal, .wrapper-large
         width: 88%
 
+    .content
+        padding-top: 40px
+
 @media #{$tablet}
     .wrapper-normal, .wrapper-large
         width: 88%
